--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,24 @@ export(anzahlIndikatorenProEffekt)
 export(anzahlWerteProIndikator)
 export(beispielAuswertung.1)
 export(generateSampleTimesFromFlaschenbericht)
+export(kuras_anlageeigenschaft)
+export(kuras_anlageeigenschaftswert)
+export(kuras_anlageoderstudie)
+export(kuras_effekt)
+export(kuras_indikator)
+export(kuras_indikatorwert)
+export(kuras_institution)
+export(kuras_kommentar)
+export(kuras_koordinatensystem)
+export(kuras_massnahmeebene)
+export(kuras_massnahmenkategorie)
+export(kuras_massnahmetyp)
+export(kuras_person)
+export(kuras_projekt)
+export(kuras_referenz)
+export(kuras_referenzgruppe)
+export(kuras_referenzgruppereferenz)
+export(kuras_standort)
 export(readKurasSamplerFileByName)
 export(readKurasSamplerFileByName.R)
 importFrom(kwb.plot,setMargins)
